--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "json-server": "json-server --watch ./test/resources/db.json --port 3001"
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
@@ -24,6 +25,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
+    "json-server": "^1.0.0-beta.3",
     "vite": "^5.4.8"
   }
 }
