--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "json-server": "json-server --watch ./test/resources/db.json --port 3001"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
